--- a/component-site/package.json
+++ b/component-site/package.json
@@ -11,16 +11,25 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.5",
+    "aos": "^3.0.0-beta.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "flowbite": "^3.1.2",
     "framer-motion": "^12.7.3",
+    "lucide-react": "^0.503.0",
+    "motion": "^12.7.4",
     "ogl": "^1.0.11",
+    "path": "^0.12.7",
     "postprocessing": "^6.37.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "three": "^0.175.0"
+    "tailwind-merge": "^3.2.0",
+    "three": "^0.175.0",
+    "tw-animate-css": "^1.2.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@tailwindcss/postcss": "^4.1.4",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
